Gravatar and worker added
